Compose on dist/ + test and lint o pre-version

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<script>
 		const { newBatch, cook, expect } = WalterWhite.Science
 
+		console.log(WalterWhite)
+
 		newBatch(`Crazy-8's Batch`, () => {
 			cook('10 pounds of the little blue', () => {
 				expect(10).toBeAsPureAs(11)
